force-app/main/default/objects/SampleRequest__c/SampleRequest__c.object-meta.xml
<CustomObject>
    <description>Sample Request (CVAP)</description>
    <label>Sample</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sample Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>