force-app/main/default/objects/SampleRequest__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <inlineHelpText>Only 4 line will be printed on the form</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>