force-app/main/default/objects/SampleRequest__c/fields/Alert_Msg_for_Sample_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>Alert_Msg_for_Sample_Request_Email__c</fullName>
    <formula>If(ISPICKVAL(Sales_Channel__c, &#39;Foodservice&#39;),
&#39;contact Maria Rieger at Maria_Rieger@cargill.com or Jake Mielke at Jacob_Mielke@cargill.com.&#39;,
&#39;contact Retail_Samples@cargill.com.&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert Msg for Sample Request Email</label>
    <type>Text</type>
</CustomField>