force-app/main/default/objects/SampleRequest__c/fields/Business_Unit_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Sales_Channel__c</fullName>
    <formula>TEXT(CFNA_Business_Unit__c) &amp; TEXT(Sales_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit-Sales Channel</label>
    <type>Text</type>
</CustomField>