force-app/main/default/objects/SampleRequest__c/fields/CFNA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CFNA_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>CFNA_Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>