force-app/main/default/objects/SampleRequest__c/fields/CFNA_Sample_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>CFNA_Sample_Request_Email__c</fullName>
    <description>Determine email address to print on Sample Request Form</description>
    <formula>/*(SUBSTITUTE(
If(ISPICKVAL(Pull_Product_From_Distributor__c, &#39;Yes&#39;)
  &amp;&amp; NOT(ISPICKVAL(CFNA_Business_Unit__c, &#39;Cargill Beef&#39;) || ISPICKVAL(CFNA_Business_Unit__c, &#39;Case Ready&#39;)),
Channel_Email__c,
Business_Unit_Email__c &amp; Channel_Email__c),
&quot;;;&quot;, &quot;;&quot;))*/
(SUBSTITUTE( 
IF( RecordType.DeveloperName = &#39;Protein_Sample_Request&#39;, 
If(ISPICKVAL(Pull_Product_From_Distributor__c, &#39;Yes&#39;) 
&amp;&amp; NOT(ISPICKVAL(CFNA_Business_Unit__c, &#39;Cargill Beef&#39;) || ISPICKVAL(CFNA_Business_Unit__c, &#39;Case Ready&#39;)), 
Channel_Email__c, 
Business_Unit_Email__c &amp; Channel_Email__c), 
Business_Unit_Email__c), 
&quot;;;&quot;, &quot;;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFNA Sample Request Email</label>
    <type>Text</type>
</CustomField>