force-app/main/default/objects/SampleRequest__c/fields/Channel_Email__c.field-meta.xml
<CustomField>
    <fullName>Channel_Email__c</fullName>
    <formula>Case(Sales_Channel__c,
  &#39;Foodservice&#39;, 
    If (ISPICKVAL(CFNA_Business_Unit__c, &#39;Cargill Beef&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;Case Ready&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;CVAP-Beef (Burgers)&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;CVAP-Poultry (Eggs)&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;Turkey &amp; Cooked Meats&#39;), 
    &#39;foodservice_samples@cargill.com&#39;, &#39;&#39;),
  &#39;Retail&#39;,     
    &#39;retail_samples@cargill.com&#39;,
  &#39;Ingredient&#39;,
    &#39;Prot_Ing_samples@cargill.com&#39;, &#39;&#39;)


/*Case(Sales_Channel__c,
  &#39;Foodservice&#39;, 
    If (ISPICKVAL(CFNA_Business_Unit__c, &#39;Cargill Beef&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;Case Ready&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;CVAP-Beef (Burgers)&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;CVAP-Poultry (Eggs)&#39;)
     || ISPICKVAL(CFNA_Business_Unit__c, &#39;Turkey &amp; Cooked Meats&#39;), 
    &#39;foodservice_samples@cargill.com&#39;, &#39;&#39;),
  &#39;Retail&#39;,
    If (NOT(ISPICKVAL(CFNA_Business_Unit__c, &#39;Cargill Beef&#39;))
	 &amp;&amp; NOT(ISPICKVAL(CFNA_Business_Unit__c, &#39;Case Ready&#39;)), 
    &#39;retail_samples@cargill.com&#39;,&#39;&#39;),
  &#39;Ingredient&#39;,
    If (NOT(ISPICKVAL(CFNA_Business_Unit__c, &#39;Cargill Beef&#39;))
	 &amp;&amp; NOT(ISPICKVAL(CFNA_Business_Unit__c, &#39;Case Ready&#39;)), 
    &#39;Prot_Ing_samples@cargill.com&#39;,&#39;&#39;), &#39;&#39;) */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Email</label>
    <type>Text</type>
</CustomField>