force-app/main/default/objects/SampleRequest__c/fields/COA_required__c.field-meta.xml
<CustomField>
    <fullName>COA_required__c</fullName>
    <label>COA required (CIC Requests Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>