force-app/main/default/objects/SampleRequest__c/fields/Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email__c</fullName>
    <inlineHelpText>Enter external email address for person that you want to be notified of this sample.</inlineHelpText>
    <label>External Notify Email (if applicable)</label>
    <type>Email</type>
</CustomField>