force-app/main/default/objects/SampleRequest__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>610911 - Engineering</fullName>
            </value>
            <value>
                <fullName>611609 - CIC Retail</fullName>
            </value>
            <value>
                <fullName>611676 – Retail</fullName>
            </value>
            <value>
                <fullName>612609 - CIC Foodservice</fullName>
            </value>
            <value>
                <fullName>612676 – Foodservice</fullName>
            </value>
            <value>
                <fullName>613609 - CIC Protein Ingredients</fullName>
            </value>
            <value>
                <fullName>613676 – Protein Ingredients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>