force-app/main/default/objects/SampleRequest__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <label>Attention to</label>
    <length>48</length>
    <type>Text</type>
</CustomField>