force-app/main/default/objects/SampleRequest__c/fields/Distributor_Location__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Location__c</fullName>
    <label>Distributor Location</label>
    <length>48</length>
    <type>Text</type>
</CustomField>