force-app/main/default/objects/SampleRequest__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <label>Distributor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ben E. Keith</fullName>
            </value>
            <value>
                <fullName>Dot</fullName>
            </value>
            <value>
                <fullName>GFS</fullName>
            </value>
            <value>
                <fullName>PFG</fullName>
            </value>
            <value>
                <fullName>Sysco</fullName>
            </value>
            <value>
                <fullName>US Foods</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>