force-app/main/default/objects/SampleRequest__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <formula>If(ISPICKVAL(Pull_Product_From_Distributor__c, &#39;No&#39;), 

&#39;A Sample for &#39; &amp; SRCustomer_Name__r.Name &amp; &#39; has been requested for delivery on &#39; &amp; TEXT(MONTH(Requested_Delivery_Date__c)) &amp; &#39;-&#39; &amp; TEXT(DAY(Requested_Delivery_Date__c)) &amp; &#39;-&#39; &amp; TEXT(YEAR(Requested_Delivery_Date__c)) &amp; &#39;. Below you will find a link to the sample request. Please login and complete the fulfillment information.&#39; &amp; IF( RecordType.DeveloperName = &#39;Protein_Sample_Request&#39;, &#39; Attached you will find the sample request form for reference.&#39;, &#39;&#39;), 

&#39;A Distributor Pull Sample for &#39; &amp; SRCustomer_Name__r.Name &amp; &#39; has been processed. The approval number is &#39; &amp; Sample_Request_No__c &amp; &#39;.&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Body</label>
    <type>Text</type>
</CustomField>