force-app/main/default/objects/SampleRequest__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <formula>If(ISPICKVAL(Pull_Product_From_Distributor__c, &#39;Yes&#39;),
&#39;A Distributor Pull Sample for &#39; &amp; SRCustomer_Name__r.Name &amp; &#39; &#39; &amp; Sample_Request_No__c &amp; &#39; has been processed&#39;,
&#39;A Sample for &#39; &amp; SRCustomer_Name__r.Name &amp; &#39; &#39; &amp; Sample_Request_No__c &amp; &#39; has been requested for delivery on &#39; &amp; TEXT(MONTH(Requested_Delivery_Date__c)) &amp; &#39;-&#39; &amp; TEXT(DAY(Requested_Delivery_Date__c)) &amp; &#39;-&#39; &amp; TEXT(YEAR(Requested_Delivery_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subject</label>
    <type>Text</type>
</CustomField>