force-app/main/default/objects/SampleRequest__c/fields/End_User_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Company_Name__c</fullName>
    <label>End User Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>