force-app/main/default/objects/SampleRequest__c/fields/End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact__c</fullName>
    <label>End User Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>