force-app/main/default/objects/SampleRequest__c/fields/End_User_Location__c.field-meta.xml
<CustomField>
    <fullName>End_User_Location__c</fullName>
    <label>End User Location (City, State)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>