force-app/main/default/objects/SampleRequest__c/fields/Fulfillment_Back_to_Requester__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Back_to_Requester__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fulfillment Back to Requester</label>
    <type>Checkbox</type>
</CustomField>