force-app/main/default/objects/SampleRequest__c/fields/Num_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Products__c</fullName>
    <description>Number of products on the request (unfiltered)</description>
    <label># of Products</label>
    <summaryForeignKey>SampleRequestProduct__c.SampleRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>