force-app/main/default/objects/SampleRequest__c/fields/Other_Deciding_Factor__c.field-meta.xml
<CustomField>
    <fullName>Other_Deciding_Factor__c</fullName>
    <label>Other Deciding Factor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>