force-app/main/default/objects/SampleRequest__c/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <description>Rollup of number of products.  Used in validation rule to require product to set status to Ready.</description>
    <label>Product Count</label>
    <summaryForeignKey>SampleRequestProduct__c.SampleRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>