force-app/main/default/objects/SampleRequest__c/fields/Products_Not_Fulfilled1__c.field-meta.xml
<CustomField>
    <fullName>Products_Not_Fulfilled1__c</fullName>
    <label>Products Not Fulfilled</label>
    <summaryFilterItems>
        <field>SampleRequestProduct__c.Fulfilled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SampleRequestProduct__c.SampleRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>