force-app/main/default/objects/SampleRequest__c/fields/Pull_Product_From_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Pull_Product_From_Distributor__c</fullName>
    <label>Is Product being pulled from Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>