force-app/main/default/objects/SampleRequest__c/fields/Reason_for_Sample__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Sample__c</fullName>
    <label>Reason for Sample</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Cutting</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Food/Trade Show</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Sales Training</fullName>
            </value>
            <value>
                <fullName>Web Inquiry</fullName>
            </value>
            <value>
                <fullName>CIC Request</fullName>
            </value>
            <value>
                <fullName>Broker Inventory</fullName>
            </value>
            <value>
                <fullName>Marketing Purposes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>