force-app/main/default/objects/SampleRequest__c/fields/Request_Form_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Form_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Request Form Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Requests_SentBy</relationshipName>
    <type>Lookup</type>
</CustomField>