force-app/main/default/objects/SampleRequest__c/fields/Request_Form_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Request_Form_Sent_On__c</fullName>
    <label>Sample Request Form Sent On</label>
    <type>DateTime</type>
</CustomField>