force-app/main/default/objects/SampleRequest__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <defaultValue>&quot;Food Service&quot;</defaultValue>
    <description>Sales Channel</description>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Channel</valueSetName>
    </valueSet>
</CustomField>