force-app/main/default/objects/SampleRequest__c/fields/Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request__c</fullName>
    <label>Sample Request</label>
    <length>80</length>
    <type>Text</type>
</CustomField>