force-app/main/default/objects/SampleRequest__c/fields/Sample_Request_Fulfilled_By__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Fulfilled_By__c</fullName>
    <label>Sample Request Fulfilled By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>