force-app/main/default/objects/SampleRequest__c/fields/Sample_Request_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Lead_Time__c</fullName>
    <formula>CASE(MOD(  Request_Date__c  - DATE(1985,6,24),7), 

  0 , CASE( MOD(  Requested_Delivery_Date__c  -  Request_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Requested_Delivery_Date__c  -  Request_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Requested_Delivery_Date__c  -  Request_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Requested_Delivery_Date__c  -  Request_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Requested_Delivery_Date__c  -  Request_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Requested_Delivery_Date__c  -  Request_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Requested_Delivery_Date__c  -  Request_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Requested_Delivery_Date__c  -  Request_Date__c)/7)*5)
  - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Request Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>