force-app/main/default/objects/SampleRequest__c/fields/Sample_Request_No__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_No__c</fullName>
    <formula>&quot;SR-&quot; &amp; Name
/*CASE( CFNA_Business_Unit__c, 
&quot;CVAP Beef&quot;, &quot;FS-&quot; &amp; Name,
&quot;CVAP Poultry&quot;, &quot;CP-&quot; &amp; Name,
&quot;CTCM&quot;, &quot;RT-&quot; &amp; Name,
&quot;CFNA&quot;, &quot;SR-&quot; &amp; Name,
&quot;XX-&quot; &amp; Name)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Request #</label>
    <type>Text</type>
</CustomField>