force-app/main/default/objects/SampleRequest__c/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <formula>SRCustomer_Name__r.SAP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Number</label>
    <type>Text</type>
</CustomField>