force-app/main/default/objects/SampleRequest__c/fields/Ship_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Company__c</fullName>
    <label>Ship to Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>