force-app/main/default/objects/SampleRequest__c/fields/SRCustomer_Name__c.field-meta.xml
<CustomField>
    <fullName>SRCustomer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(CKS) (CFNA)</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>