force-app/main/default/objects/SampleRequest__c/fields/StatePicklist__c.field-meta.xml
<CustomField>
    <fullName>StatePicklist__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>