force-app/main/default/objects/SampleRequest__c/fields/What_was_the_deciding_factor__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_deciding_factor__c</fullName>
    <label>What was the deciding factor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pack Size</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Taste</fullName>
            </value>
            <value>
                <fullName>Texture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>