force-app/main/default/objects/SampleRequest__c/recordTypes/Protein_Sample_Request.recordType-meta.xml
<RecordType>
    <fullName>Protein_Sample_Request</fullName>
    <active>true</active>
    <description>Record type for all Protein requests [Cargill Beef, Case Ready, CVAP-Beef (Burgers), CVAP-Poultry (Eggs),Turkey &amp; Cooked Meats]</description>
    <label>Protein Sample Request</label>
</RecordType>