force-app/main/default/objects/SampleRequest__c/validationRules/Protein_CICS_request_requires_entry.validationRule-meta.xml
<ValidationRule>
    <fullName>Protein_CICS_request_requires_entry</fullName>
    <active>true</active>
    <description>Protein - CICS request requires entry in COA</description>
    <errorConditionFormula>ISPICKVAL(Reason_for_Sample__c, &quot;CIC Request&quot;)
&amp;&amp;
ISBLANK(Text(COA_required__c))
&amp;&amp; 
$Setup.Bus_Logic_Settings__c.Run_Validation__c</errorConditionFormula>
    <errorDisplayField>COA_required__c</errorDisplayField>
    <errorMessage>If Reason for Sample is &#39;CIC Request&#39;, then &#39;COA Required&#39; must be filled in.</errorMessage>
</ValidationRule>