force-app/main/default/objects/SampleRequest__c/validationRules/Protein_Dont_allow_delivery_on_Monday.validationRule-meta.xml
<ValidationRule>
    <fullName>Protein_Dont_allow_delivery_on_Monday</fullName>
    <active>true</active>
    <description>Protein Don&#39;t allow delivery on Monday</description>
    <errorConditionFormula>$Setup.Bus_Logic_Settings__c.Run_Validation__c 
&amp;&amp; 
MOD(Requested_Delivery_Date__c - DATE(1900, 1, 7), 7) = 1 
&amp;&amp; 
ISPICKVAL(Pull_Product_From_Distributor__c, &#39;No&#39;)</errorConditionFormula>
    <errorMessage>Requested Delivery Date can&#39;t be on Monday.</errorMessage>
</ValidationRule>