force-app/main/default/objects/SampleRequest__c/validationRules/Protein_SampleRequest_End_User_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Protein_SampleRequest_End_User_Req</fullName>
    <active>true</active>
    <description>End User fields becomes required when Is the product being pulled from a distributor is marked Yes and the Reason is not &#39;Customer Visit&#39; or &#39;Lead&#39;</description>
    <errorConditionFormula>$Setup.Bus_Logic_Settings__c.Run_Validation__c
&amp;&amp;
ISPICKVAL(Pull_Product_From_Distributor__c,&#39;Yes&#39;)
&amp;&amp;
(ISPICKVAL(Reason_for_Sample__c, &#39;Customer Visit&#39;)
||
ISPICKVAL(Reason_for_Sample__c, &#39;Lead&#39;))
&amp;&amp;
(ISBLANK(End_User_Company_Name__c) || ISBLANK(End_User_Contact__c) || ISBLANK(End_User_Location__c))</errorConditionFormula>
    <errorMessage>End User information is required when &quot;Is Product Being Pulled From Distributor&quot; is marked Yes and Reason is not &#39;Customer Visit&#39; or &#39;Lead&#39;.
End User Company Name, End User Contact and End User Location are required.</errorMessage>
</ValidationRule>